src/scss/modules/_headerbanner.scss
// header banner section
.banner-zone-node {
  position: relative;

  .banner--medium {
    .banner-cta {
      bottom: 0;
      left: 0;
      position: absolute;
      right: 0;
      top: 0;
      z-index: 1;
      @media (min-width: 768px) {
        min-height: auto;
      }

      @media (min-width: 576px) {
        min-height: auto;
      }
    }
  }

  .banner-bg {
    min-height: 500px;
    height: 100%;
    bottom: 0;
    left: 0;
    position: absolute;
    right: 0;
    top: 0;
    z-index: 1;
    @media (max-width: 991px) {
      min-height: auto;
    }
  }
}

.paragraph--type--banner {
  .banner-title {
    font-family: $font-family-basic;
    font-size: 48px;
    font-weight: 500;
    letter-spacing: 0;
    line-height: 60px;
    text-transform: none;
    @media (max-width: 992px) {
      font-size: 36px;
      line-height: 48px;
    }
  }
}

.banner-title {
  font-family: $font-family-basic;
  font-size: 48px;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 60px;
  text-transform: none;
  @media (max-width: 992px) {
    font-size: 36px;
    line-height: 48px;
  }
}

.banner-description {
  font-family: $font-family-basic;
  font-size: 24px;
  font-weight: 500;
  line-height: 36px;
  text-transform: uppercase;
  @media (max-width: 992px) {
    font-size: 18px;
    line-height: 27px;
  }
}

@media (min-width: 992px) {
  .banner-zone-node {
    .banner-cta {
      padding-top: 0;
    }
  }
}

.banner--small {
  min-height: auto;
  padding-top: 0;
}

